# ComfyUI_CosyVoice2

./: .gitignore  LICENSE  README.cn.md  README.md  __init__.py  pyproject.toml
exsample/: workflow.json
